--- a/src/App.css
+++ b/src/App.css
@@ -13,3 +13,11 @@
   font-size: calc(10px + 2vmin);
   color: white;
 }
+
+img {
+  align-items: center;
+  justify-content: center;
+  margin: auto;
+  max-width:25%;
+  height:auto;
+}
